# bob

./: .gitignore  Cargo.toml  Dockerfile  build.sh  canister_ids.json  dfx.json  readme.md  sns-init.yaml  sns_init.yaml
.github/workflows/: docker-build.yaml  tests.yaml  validation.yaml
alice/: Cargo.toml  alice.did  readme.md
alice/src/: bob.rs  guard.rs  ics_pool.rs  ledger.rs  lib.rs  llm.rs  main.rs  memory.rs  state.rs  tasks.rs
bob/integration-tests/: Cargo.toml
bob/miner-v2/src/: main.rs
bob/minter-v2/: Cargo.toml  build.rs
bob/minter-v2/src/: lib.rs  main.rs  miner.rs  tasks.rs
integration-tests/: Cargo.toml
integration-tests/src/: lib.rs  setup.rs  utils.rs
miner-v2/: Cargo.toml  miner.did
miner-v2/src/: lib.rs  main.rs
minter-v2/: Cargo.toml  bob.did  build.rs
minter-v2/src/: guard.rs  lib.rs  main.rs  memory.rs  miner.rs
scripts/: download-nns-canister-wasm.sh  run-integration-tests.sh
