[package]
name = "alice"
version = "0.1.0"
edition = "2021"

[dependencies]
candid = { workspace = true }
ciborium = { workspace = true }
futures = { workspace = true }
ic0 = { workspace = true }
ic-canister-log = { workspace = true }
ic-canisters-http-types = { workspace = true }
ic-cdk = { workspace = true }
ic-ledger-types = { workspace = true }
icrc-ledger-types = { workspace = true }
icrc-ledger-client-cdk = { workspace = true }
ic-stable-structures = { workspace = true }
scopeguard = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }

[dev-dependencies]
candid_parser = { workspace = true }