[package]
name = "bob_miner_v2"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "bob_miner_v2"
path = "src/main.rs"

[dependencies]
candid = { workspace = true }
candid_parser = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-timers = { workspace = true }
serde = { workspace = true }
