[package]
name = "bob-minter-v2"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "bob-minter-v2"
path = "src/main.rs"

[dependencies]
candid = "0.10.10"
ciborium = "0.2.2"
cycles-minting-canister = { git = "https://github.com/dfinity/ic/", rev = "3025f56fc3d6babd64ec1bc84d61cf937fd2b633" }
ic-base-types = { git = "https://github.com/dfinity/ic/", rev = "3025f56fc3d6babd64ec1bc84d61cf937fd2b633" }
ic-cdk = "0.17.0"
ic-stable-structures = "0.6.5"
ic0 = "0.23.0"
ic-management-canister-types = { git = "https://github.com/dfinity/ic/", rev = "3025f56fc3d6babd64ec1bc84d61cf937fd2b633" }
icrc-ledger-client-cdk = { git = "https://github.com/dfinity/ic/", rev = "3025f56fc3d6babd64ec1bc84d61cf937fd2b633" }
ic-types = { git = "https://github.com/dfinity/ic/", rev = "3025f56fc3d6babd64ec1bc84d61cf937fd2b633" }
icrc-ledger-types = { git = "https://github.com/dfinity/ic/", rev = "3025f56fc3d6babd64ec1bc84d61cf937fd2b633" }
ic-ledger-core = { git = "https://github.com/dfinity/ic/", rev = "3025f56fc3d6babd64ec1bc84d61cf937fd2b633" }
icp-ledger = { git = "https://github.com/dfinity/ic/", rev = "3025f56fc3d6babd64ec1bc84d61cf937fd2b633" }
ic-icp-index = { git = "https://github.com/dfinity/ic/", rev = "3025f56fc3d6babd64ec1bc84d61cf937fd2b633" }
rand = "0.8"
serde_json = "1.0.120"
serde = "1.0.209"   