[package]
name = "bob-minter-v2"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "bob-minter-v2"
path = "src/main.rs"

[dependencies]
candid = "0.10.11"
candid_parser = "0.2.0-beta.4"
ciborium = "0.2.2"
cycles-minting-canister = { git = "https://github.com/dfinity/ic/", rev = "bc83b42ae2b8c8246e6387731910842a12ebee90" }
ic-base-types = { git = "https://github.com/dfinity/ic/", rev = "bc83b42ae2b8c8246e6387731910842a12ebee90" }
ic-cdk = "0.17.1"
ic-stable-structures = "0.6.5"
ic0 = "0.23.0"
ic-management-canister-types = { git = "https://github.com/dfinity/ic/", rev = "bc83b42ae2b8c8246e6387731910842a12ebee90" }
icrc-ledger-client-cdk = { git = "https://github.com/dfinity/ic/", rev = "bc83b42ae2b8c8246e6387731910842a12ebee90" }
ic-types = { git = "https://github.com/dfinity/ic/", rev = "bc83b42ae2b8c8246e6387731910842a12ebee90" }
icrc-ledger-types = { git = "https://github.com/dfinity/ic/", rev = "bc83b42ae2b8c8246e6387731910842a12ebee90" }
ic-ledger-core = { git = "https://github.com/dfinity/ic/", rev = "bc83b42ae2b8c8246e6387731910842a12ebee90" }
icp-ledger = { git = "https://github.com/dfinity/ic/", rev = "bc83b42ae2b8c8246e6387731910842a12ebee90" }
ic-icp-index = { git = "https://github.com/dfinity/ic/", rev = "bc83b42ae2b8c8246e6387731910842a12ebee90" }
rand = "0.8"
rand_chacha = "0.3.1"
scopeguard = "1.2.0"
serde_json = "1.0.120"
serde = "1.0.209"
