[package]
name = "integration-tests"
version = "0.0.1"
edition = "2021"

[dependencies]
candid = { workspace = true }
candid_parser = { workspace = true }
hex = { workspace = true }
ic-icp-index = { workspace = true }
ic-icrc1-ledger = { workspace = true }
ic-ledger-core = { workspace = true }
ic-ledger-types = { workspace = true }
icp-ledger = { workspace = true }
icrc-ledger-types = { workspace = true }
bob_minter_v2 = { path = "../minter-v2" }
pocket-ic = { workspace = true }
