[package]
name = "bob_minter_v2"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "bob_minter_v2"
path = "src/main.rs"

[dependencies]
candid = { workspace = true }
candid_parser = { workspace = true }
ciborium = { workspace = true }
cycles-minting-canister = { workspace = true }
ic-base-types = { workspace = true }
ic-cdk = { workspace = true }
ic-stable-structures = { workspace = true }
ic0 = { workspace = true }
ic-management-canister-types = { workspace = true }
icrc-ledger-client-cdk = { workspace = true }
ic-types = { workspace = true }
icrc-ledger-types = { workspace = true }
ic-ledger-core = { workspace = true }
icp-ledger = { workspace = true }
ic-icp-index = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
scopeguard = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
